--- a/index.html
+++ b/index.html
@@ -43,6 +43,101 @@
   </header>
   <!-- /.header -->
 
+  <main>
+    <section class="section1">
+      <div class="container">
+        <h6>photodiary</h6>
+        <h4>The perfect weekend getaway</h4>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
+          id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+          laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+          dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia
+          consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem
+          ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut
+          labore et dolore magnam aliquam quaerat voluptatem</p>
+        <a href="javascript:;">leave a comment</a>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section1 -->
+    <section class="section2">
+      <div class="container">
+        <div class="section2-wrap">
+          <div class="block">
+            <img src="img/section2/1.png" alt="">
+            <div class="content">
+              <h6>lifestyle</h6>
+              <h4>More than just a music festival</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.block -->
+          <div class="block">
+            <img src="img/section2/2.png" alt="">
+            <div class="content">
+              <h6>lifestyle</h6>
+              <h4>Life tastes beyyer with coffe</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.block -->
+          <div class="block">
+            <img src="img/section2/3.png" alt="">
+            <div class="content">
+              <h6>photodiary</h6>
+              <h4>American dream</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.block -->
+          <div class="block">
+            <img src="img/section2/4.png" alt="">
+            <div class="content">
+              <h6>photodiary</h6>
+              <h4>A day exploring the Alps</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.block -->
+        </div>
+        <!-- /.section2-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section2 -->
+    <section class="newsletter">
+      <div class="container">
+        <h5>Sign up for our newsletter!</h5>
+        <div class="form">
+          <form action="#" method="POST">
+            <div class="input">
+              <input type="text" name="email" required>
+              <button>
+                <i class="fas fa-paper-plane"></i>
+              </button>
+              <span>Enter a valid email address</span>
+            </div>
+            <!-- /.input -->
+          </form>
+        </div>
+        <!-- /.form -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.newsletter -->
+  </main>
+
 
 
 
