--- a/index.html
+++ b/index.html
@@ -136,21 +136,70 @@
       <!-- /.container -->
     </section>
     <!-- /.newsletter -->
+    <section class="section3">
+      <div class="container">
+        <div class="section3-wrap">
+          <div class="block">
+            <img src="img/section3/1.png" alt="">
+            <div class="content">
+              <h6>lifestyle</h6>
+              <h4>Top 10 song for running</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.block -->
+          <div class="block">
+            <img src="img/section3/2.png" alt="">
+            <div class="content">
+              <h6>lifestyle</h6>
+              <h4>Cold winter days</h4>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
+            </div>
+            <!-- /.content -->
+          </div>
+          <!-- /.block -->
+        </div>
+        <!-- /.section3-wrap -->
+        <div class="btn">
+          <button>Load more</button>
+        </div>
+        <!-- /.btn -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section3 -->
   </main>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-wrap">
+        <div class="block links">
+          <a href="javascript:;">Terms & Conditions</a>
+          <a href="javascript:;">Privacy</a>
+        </div>
+        <!-- /.block -->
+        <div class="block social">
+          <h6>Follow:</h6>
+          <a href="javascript:;">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="javascript:;">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="javascript:;">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
+        <!-- /.block -->
+      </div>
+      <!-- /.footer-wrap -->
+    </div>
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer -->
 
 
 
